fix: generated Stackblitz examples not working when forked to a repo (#901)
We weren't generating a full valid HTML file when creating the `index.html` for Stackblitz
which meant that if somebody creates a repository out of it, it won't work. These changes
resolve the issue by providing the full HTML file.

Providing the full HTML also allows us to represent a real app better and to fix some
issues like the one where the app background doesn't cover the whole page.

Fixes https://github.com/angular/components/issues/21461.

--- a/material.angular.io/material.angular.io/material.angular.io/material.angular.io/material.angular.io/src/assets/stack-blitz/src/styles.scss
+++ b/material.angular.io/material.angular.io/material.angular.io/material.angular.io/material.angular.io/src/assets/stack-blitz/src/styles.scss
@@ -3,10 +3,9 @@
 body {
   font-family: Roboto, Arial, sans-serif;
   margin: 0;
-}
-.basic-container {
   padding: 30px;
 }
+
 .version-info {
   font-size: 8pt;
   float: right;
